Fixed about page not fitting 9 rows
Added .about-team-officer:nth-child(9) to about-team-officer with padding-right: 0%

--- a/css/main.css
+++ b/css/main.css
@@ -426,7 +426,7 @@ i {
   width: 30%;
   vertical-align: top; }
 
-.about-team-officer:nth-child(3), .about-team-officer:nth-child(6) {
+.about-team-officer:nth-child(3), .about-team-officer:nth-child(6), .about-team-officer:nth-child(9) {
   padding-right: 0%; }
 
 .careers-intro {
